# Scraper_Analysis_Project

./: README.md
News_Analysis/: README.md  pyproject.toml
News_Analysis/core/: settings.py  urls.py
News_Analysis/media/: news_data.csv
News_Analysis/news/: admin.py  models.py  serializers.py  urls.py  views.py
News_Analysis/news/migrations/: 0001_initial.py
News_Analysis/static/css/: styles.css
News_Analysis/templates/: analysis.html  base.html  category_classification.html  export.html  home.html  keywords.html  news.html  sentiment_analysis.html  source_distribution.html
